<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstValueEditText"
            android:layout_width="wrap_content"

            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/first_value"
            android:inputType="number" />

        <EditText
            android:id="@+id/secondValueEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/second_value"
            android:inputType="number" />

        <EditText
            android:id="@+id/thirdValueEditText"
            android:layout_width="wrap_content"

            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/third_value"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textSize="30sp" />
</LinearLayout>
